--- a/src/styles/Quiz.module.css
+++ b/src/styles/Quiz.module.css
@@ -92,6 +92,13 @@
     padding: 1.1rem 4rem;
 }
 
+.welcomeScreen p:last-of-type {
+    font-size: 15px;
+    color: grey;
+    margin-top: 5em;
+    max-width: 700px;
+}
+
 .primaryCTA {
     appearance: none;
     -webkit-appearance: none;
